--- a/src/components/ServicesSection/ServicesSection.css
+++ b/src/components/ServicesSection/ServicesSection.css
@@ -24,12 +24,11 @@
 
 .slider-container {
   overflow: hidden;
-  position: relative;
+  width: 100%;
 }
 
 .slider-track {
   display: flex;
-  transition: transform 0.6s ease-in-out;
 }
 
 .slide {
